package com._520.facade;

/**
 *  对文件内容进行加密
 */
public class CipherMachine {

    /**
     *  对文件内容进行加密
     * @param plainText     加密的文件
     * @return              加密后的文件
     */
    public String encrypt(String plainText){
        System.out.println("2、对文件进行加密操作");
        return plainText;
    }
}
