package com._520.facade;

/**
 *  将加密后的文件保存
 */
public class FileWriter {

    /**
     *  将加密后的文件保存
     * @param encryptText       加密后的文件内容
     * @param fileName          文件名称
     */
    public void write(String encryptText, String fileName){
        System.out.println("3、将加密后的文件保存，文件名称是：" + fileName);
    }
}
